--- a/app/src/main/res/layout/content_reminders.xml
+++ b/app/src/main/res/layout/content_reminders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_reminders"
@@ -9,4 +10,10 @@
     tools:context="me.stupideme.shucampus.remind.RemindersActivity"
     tools:showIn="@layout/activity_reminders">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/reminders_activity_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
