add course feature

--- a/app/src/main/res/layout/content_classes.xml
+++ b/app/src/main/res/layout/content_classes.xml
@@ -2,48 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
+    android:id="@+id/content_classes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="me.stupideme.shucampus.course.ClassesActivity"
     tools:showIn="@layout/activity_classes">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ListView
+        android:id="@+id/classes_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <!--课程表表头目录-->
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    </ListView>
 
-                <include layout="@layout/layout_day_content" />
-            </LinearLayout>
-        </ScrollView>
-
-
-        <ScrollView
-            android:id="@+id/classes_scroll_col"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true"
-            android:scrollbars="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="600dp"
-                android:orientation="horizontal">
-
-                <include layout="@layout/layout_num_content" />
-
-                <include layout="@layout/layout_weekly_columns" />
-            </LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
