--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
+    android:id="@+id/activity_edit_event"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.stupideme.shucampus.activity.MainActivity"
-    tools:showIn="@layout/app_bar_main">
-
-
+    tools:context="me.stupideme.shucampus.activity.EditEventActivity">
 
 </android.support.constraint.ConstraintLayout>
