--- a/app/src/main/res/layout/content_classes.xml
+++ b/app/src/main/res/layout/content_classes.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.stupideme.shucampus.course.ClassesActivity"
-    tools:showIn="@layout/activity_classes">
+    tools:context="me.stupideme.shucampus.course.EditClassActivity"
+    tools:showIn="@layout/activity_edit_class">
     <ListView
         android:id="@+id/classes_list_view"
         android:layout_width="match_parent"
