--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_notification"
+        android:orderInCategory="90"
+        android:title="通知"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_notifications_white_24dp"/>
 </menu>
