--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="me.stupideme.shucampus.ui.MainActivity">
+    tools:context="me.stupideme.shucampus.view.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,23 +21,27 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!--<include layout="@layout/fragment_events" />-->
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"></FrameLayout>
+        android:layout_marginTop="?attr/actionBarSize">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <!--<ListView-->
-    <!--android:id="@+id/list_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:fastScrollEnabled="true"-->
-    <!--android:fadingEdge="none"-->
-    <!--android:overScrollMode="never"-->
-    <!--android:layout_marginTop="?attr/actionBarSize"-->
-    <!--android:layout_height="match_parent">-->
+        </android.support.v7.widget.RecyclerView>
 
-    <!--</ListView>-->
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
