--- a/app/src/main/res/layout/content_course.xml
+++ b/app/src/main/res/layout/content_course.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.stupideme.shucampus.ui.CourseActivity"
+    tools:context="me.stupideme.shucampus.view.CourseActivity"
     tools:showIn="@layout/activity_course">
 
     <LinearLayout
