--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:fitsSystemWindows="true"
+    tools:context=".view.CourseAddActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <!--<android.support.design.widget.AppBarLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/add_class_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <!--<android.support.v7.widget.Toolbar-->
+    <!--android:id="@+id/add_class_toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:background="?attr/colorPrimary"-->
+    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+    <include layout="@layout/toolbar" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
 
@@ -53,11 +56,10 @@
                 <Spinner
                     android:id="@+id/spinner_weekday"
                     android:layout_width="0dp"
-                    android:layout_weight="1.5"
                     android:layout_height="match_parent"
-                    android:gravity="start"
+                    android:layout_weight="1.5"
                     android:entries="@array/class_weekdays"
-                    >
+                    android:gravity="start">
 
                 </Spinner>
 
@@ -68,8 +70,8 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:hint="1"
-                    android:maxLength="2"
                     android:inputType="number"
+                    android:maxLength="2"
                     android:textSize="16sp" />
 
                 <android.support.v7.widget.AppCompatEditText
@@ -166,21 +168,21 @@
                     android:textSize="18sp" />
 
                 <!--<android.support.v7.widget.AppCompatEditText-->
-                    <!--android:id="@+id/edit_mod"-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:layout_weight="1.3"-->
-                    <!--android:entries="@array/class_mod"-->
-                    <!--android:textSize="16sp" />-->
+                <!--android:id="@+id/edit_mod"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1.3"-->
+                <!--android:entries="@array/class_mod"-->
+                <!--android:textSize="16sp" />-->
                 <Spinner
+                    android:id="@+id/spinner_mod"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
                     android:backgroundTint="@null"
                     android:entries="@array/class_mod"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="start"
-                    android:id="@+id/spinner_mod" />
+                    android:gravity="start" />
 
             </TableRow>
 
@@ -199,7 +201,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="@color/colorPrimary" />
+                    android:background="@color/tomato" />
 
                 <android.support.v4.widget.Space
                     android:layout_width="30dp"
@@ -211,6 +213,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:gravity="end|center_vertical"
                     android:text="清空"
                     android:textColor="@color/colorAccent"
                     android:textSize="16sp" />
@@ -220,6 +223,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:gravity="center"
                     android:text="保存"
                     android:textColor="@color/colorAccent"
                     android:textSize="16sp" />
@@ -228,6 +232,6 @@
 
     </android.support.v7.widget.CardView>
 
-</android.support.v7.widget.LinearLayoutCompat>
+</android.support.design.widget.CoordinatorLayout>
 
 
