--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -18,6 +18,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingLeft="16dp"
+            android:layout_marginTop="8dp"
             android:paddingRight="16dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
